--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
+// Apply the necessary plugins
 plugins {
-    alias(libs.plugins.android.application)
-    id("com.google.gms.google-services")
+    id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -30,35 +31,49 @@ android {
 }
 
 dependencies {
-    implementation(platform("com.google.firebase:firebase-bom:33.3.0"))
-    implementation("com.google.firebase:firebase-analytics")
-    implementation("com.google.firebase:firebase-firestore")
-    implementation libs.appcompat
-    implementation libs.material
-    implementation libs.activity
-    implementation libs.constraintlayout
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
+    // Remove Firestore dependencies
+    // implementation "com.google.firebase:firebase-firestore"
+    // implementation 'com.google.firebase:firebase-firestore:24.7.1'
 
-    // Firebase Firestore
-    implementation 'com.google.firebase:firebase-firestore:24.7.1'
+    // Room components
+    implementation "androidx.room:room-runtime:2.5.2"
+    annotationProcessor "androidx.room:room-compiler:2.5.2" // For Java
+    // If you prefer using Kotlin, replace annotationProcessor with kapt and apply the kotlin-kapt plugin
+
+    // Optional - RxJava support for Room
+    // implementation "androidx.room:room-rxjava2:2.5.2"
+
+    // Optional - Kotlin Extensions and Coroutines support for Room
+    // implementation "androidx.room:room-ktx:2.5.2"
+
+    // Lifecycle components
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.5.1'
 
     // RecyclerView
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.9.0'
 
     // Volley library for network requests
     implementation 'com.android.volley:volley:1.2.1'
 
-    // For standard Java classes
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.0'
+    // Gson for JSON parsing
+    implementation 'com.google.code.gson:gson:2.10.1'
 
-    // For UI components
+    // AppCompat
     implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.9.0'
 
-    // View binding and Android UI components
+    // ConstraintLayout
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.code.gson:gson:2.8.9'
 
+    // Testing libraries
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // Kotlin Standard Library (if you're using Kotlin in any part of your project)
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.7.0'
 }
