--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 plugins {
-    alias(libs.plugins.android.application) apply false
-    id("com.google.gms.google-services") version "4.4.2" apply false
+    // Remove the alias line if not using version catalogs (libs.versions.toml)
+    // alias(libs.plugins.android.application) apply false
+    id("com.google.gms.google-services") version "4.3.15" apply false // Ensure this is needed globally
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// Remove any repositories block if present
+/*
+repositories {
+    google()
+    mavenCentral()
+}
+*/
